# Xpure_fork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  waf  wscript  xpure.batch
cmake/: FindHEALPIX.cmake
include/: xpure.h
makefiles/: makefile_magique3
src/: CMakeLists.txt  makefile  makefile_cori  makefile_edison  makefile_hopper  makefile_ulysses  optimalmasks_PCG.c  s2hat_map2purealm.c  s2hat_pure.h  scalar2spin.c  xpure.c  xpure.h  xpure_2.c  xpure_create_mll.c  xpure_io.c  xpure_tools.c
src/apodizations/: CMakeLists.txt  apodizemask.c
src/coupling_matrix_computation/: CMakeLists.txt
src/spectra_estimation/: CMakeLists.txt  compute_all_xls.c  xpure.c
src/tools/: CMakeLists.txt  wig3j_f.f  xpure_tools.c
